# RentEaseBackend

./: .env  .gitignore  Pipfile  README.md  app.py  pyproject.toml  render.yaml  requirements.txt  run.py  sendgrid.env
.github/workflows/: ci.yml
migrations/versions/: 7bef57448b81_initial_migration.py  8bf0676050df_initial_postgresql_migration.py
server/: __init__.py  app.py  config.py  models.py  seed.py  swagger_spec.py
server/instance/: app.db
server/migrations/versions/: 1b6f021b0459_initial_migration.py  eaa98736ba5c_initial_migration.py  ff6a0f46b4a1_initial_clean_migration.py
server/utils/: email_service.py
tests/: test_sample.py
