[tool.poetry]
name = "rentease-backend"
version = "0.1.0"
description = "RentEase Backend API"
authors = ["Jeremy Jomo <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0"
flask-sqlalchemy = "^3.0"
flask-cors = "^2.0"
gunicorn = "^21.0"

[tool.poetry.dev-dependencies]
black = "^23.0"
isort = "^5.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '.pyi?$'
exclude = '''
/(
    .git
  | .venv
  | venv
  | migrations
  | pycache
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = ["venv", "migrations", ".git"]